--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,3 +8,10 @@ h1, h2, h3 {
   font-weight: normal;
 }
 .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+
+img {
+  max-height: 600px;
+  max-width: 800px;
+  display: block;
+  margin: 0 auto;
+}
