adding footer and stuff

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,3 +13,13 @@ img {
   max-height: 600px;
   max-width: 750px;
 }
+
+.watermark {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding-top: 10px;
+    height: 35px;
+    opacity: .5;
+    width: 100%;
+}
