--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -7,8 +7,9 @@
   <body>
     <textarea id="source">
 {{ content }}
+    <div class="my-footer"><span>&copy; 2011 - 2015 My Company, Inc.</span></div>
     </textarea>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+    <script src="/assets/js/remark.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
       var slideshow = remark.create({navigation: {scroll: false,}});
