--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -7,12 +7,11 @@
   <body>
     <textarea id="source">
 {{ content }}
-    <div class="my-footer"><span>&copy; 2011 - 2015 My Company, Inc.</span></div>
     </textarea>
     <script src="/assets/js/remark.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create({navigation: {scroll: false,}});
+      var slideshow = remark.create({navigation: {scroll: false,}, ratio: '16:9'});
     </script>
   </body>
 </html>
