--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,4 +22,13 @@ img {
     height: 35px;
     opacity: .5;
     width: 100%;
+    text-align: left;
+    padding-left: 25px;
+}
+
+.elixir {
+  width: fit-content;
+  padding: 20px !important;
+  margin: 0 auto;
+  font-size: 20px;
 }
