--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -11,7 +11,13 @@
     <script src="/assets/js/remark.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create({navigation: {scroll: false,}, ratio: '16:9'});
+      var slideshow = remark.create({
+        navigation: {scroll: false,},
+        ratio: '16:9',
+        highlightLanguage: 'elixir',
+        highlightStyle: 'github',
+        highlightSpans: true
+      });
     </script>
   </body>
 </html>
