--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,7 +30,7 @@ img {
   max-width: 750px;
 }
 
-.watermark {
+.watermark-left {
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -40,6 +40,17 @@ img {
     width: 100%;
     text-align: left;
     padding-left: 25px;
+}
+
+.watermark-middle {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding-top: 10px;
+    height: 35px;
+    opacity: .5;
+    width: 100%;
+    text-align: center;
 }
 
 .cols {
