--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,6 +11,10 @@ h1, h2, h3 {
   font-weight: normal;
 }
 
+li {
+  margin-bottom: 10px;
+}
+
 .remark-code, .remark-inline-code {
   font-family: 'Ubuntu Mono';
   background-color: rgb(250, 250, 250) !important;
