--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,6 +11,20 @@ h1, h2, h3 {
   font-weight: normal;
 }
 
+.headline h1 {
+  font-size: 200px;
+}
+
+.headline h2 {
+  font-size: 125px;
+  margin: 30px;
+}
+
+.headline h3 {
+  font-size: 85px;
+  margin: 0px;
+}
+
 li {
   margin-bottom: 10px;
 }
@@ -29,9 +43,26 @@ li {
   background-color: rgb(250, 250, 250) !important;
 }
 
+.gotober-intro {
+  background-image: url("/assets/images/intro_Ber.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.gotober-outro {
+  background-image: url("/assets/images/outro_Ber.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.max-img-width-940 img {
+  max-height: 475px;
+  max-width: 940px;
+}
+
 img {
   max-height: 600px;
-  max-width: 750px;
+  max-width: 1050px;
 }
 
 .watermark-left {
@@ -55,6 +86,34 @@ img {
     opacity: .5;
     width: 100%;
     text-align: center;
+}
+
+.gotober-intro .watermark-left {
+  display: none;
+}
+
+.gotober-intro .watermark-left {
+  display: none;
+}
+
+.gotober-intro .watermark-middle {
+  display: none;
+}
+
+.gotober-intro .remark-slide-number {
+  display: none;
+}
+
+.gotober-outro .watermark-left {
+  display: none;
+}
+
+.gotober-outro .watermark-middle {
+  display: none;
+}
+
+.gotober-outro .remark-slide-number {
+  display: none;
 }
 
 .cols {
